# vc-daily-brief-agent

./: .env.example  .gitignore  README.md  design.md  pyproject.toml  requirements.txt
.github/workflows/: pytest.yml
config/: sources.yaml  user_profile.yaml
ops/: cron.example  serve_feedback.launchd.plist.example
sample_output/: 2026-04-23_brief.md
scripts/: bootstrap.py  render_readme_assets.py  run_once.py  serve_feedback.py  update_profile.py
src/vc_agent/: bootstrap.py  briefing.py  delivery_preferences.py  domain.py  profile.py  profile_nlp.py  profile_update.py  scheduler.py  settings.py  storage.py  user_runtime.py
src/vc_agent/connectors/: __init__.py  rss.py  youtube.py
src/vc_agent/delivery/: __init__.py  feishu.py
src/vc_agent/feedback/: intent_agent.py  long_connection.py  message_preferences.py  preference_assistant_state.py  processing.py  repository_routing.py  schedule_commands.py  server.py
src/vc_agent/llm/: client.py
src/vc_agent/pipeline/: run_once.py
src/vc_agent/ranking/: __init__.py  dedup.py  learner.py  rules.py
src/vc_agent/utils/: text.py  time.py
tests/: test_bootstrap.py  test_compose_brief.py  test_dedup.py  test_feedback_callback.py  test_feedback_rerank.py  test_feishu_delivery.py  test_intent_agent.py  test_long_connection.py  test_message_preferences.py  test_profile.py  test_profile_nlp.py  test_rss_connector.py  test_rules.py  test_run_once.py  test_schedule_commands.py  test_scheduler.py  test_sources.py  test_text_utils.py  test_topic_selection.py  test_user_runtime.py
