[project]
name = "vc-agent-solution"
version = "0.1.0"
description = "VC information aggregation agent prototype"
requires-python = ">=3.9"
dependencies = [
  "feedparser>=6.0.11",
  "requests>=2.32.0",
  "PyYAML>=6.0.1",
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "uvicorn>=0.30.0",
  "lark-oapi>=1.5.5",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
